--- a/src/components/PuzzleBoard/PuzzleBoard.css
+++ b/src/components/PuzzleBoard/PuzzleBoard.css
@@ -1,9 +1,8 @@
 .puzzleBoard {
   height: 100px;
   margin: auto;
-  background-color: #1a9258;
   text-align: center;
-  padding: 20px;
+  line-height: 100px;
 }
 
 .puzzleWrapper {
@@ -28,20 +27,21 @@
   margin-right: 50px;
   float: left;
   border: solid 1px #000000;
-  background-color: grey;
+  background-color: rgb(230, 240, 244);
   text-align: center;
   line-height: 50px;
 }
 
 #runningScore {
-  color: #ffffff;
+  color: #000000;
   width: 100%;
 }
 
 .refreshPuzzleButton {
   float: left;
   clear: both;
-  height: 80px;
-  width: 200px;
+  height: 50px;
+  width: 120px;
   background-color: cornflowerblue;
+  font-size: 0.75rem;
 }
